--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
                     <li><a href="#skills">Skills</a></li>
                     <li class="parent-nav"><a href="#projects">Projects</a>
                       <ul>
+                        <li><a href="#car">Car Api project</a></li>
                         <li><a href="#mortgage">Mortgage Calculator</a></li>
-                          <li><a href="#pm">Project Manager</a></li>
-                          <li><a href="#polly">Polly</a></li>
-                          <li><a href="#weather">Local Weather</a></li>
+                        <li><a href="#pm">Project Manager</a></li>
+                        <li><a href="#polly">Polly</a></li>
+                        <li><a href="#weather">Local Weather</a></li>
                       </ul>
                     </li>
                 </ul>
@@ -137,7 +138,7 @@
 
   <h2 class="sub-heading">Projects</h2>
                          
-  <div id="mortgage" class="projects">
+  <div id="car" class="projects">
       <div class="project-header">
          <div class="header-left">
              <h3 class="title">Car Api / Vue front end - Work in progress</h3>
@@ -154,7 +155,7 @@
        <p>This project conists of a Laravel API which is consued by a Vue front end. This project is currently under development.</p> 
        <p>The Api includes tests and database seeds.</p>
        <p>The front end uses Vuex for state management, Vue router and the taildwind css library.</p>
-       <a class="btn" href="https://github.com/Drew77/mortgage-calculator/tree/master/src" target="_blank">View Source</a> 
+       <a class="btn" href="https://github.com/Drew77/car-api-project" target="_blank">View Source</a> 
      </div>
      <div class="right-info">
          
